# party-music-control-django

./: .gitignore  README.org  pyproject.toml  requirements.txt
music_controller/api/: apps.py  models.py  serializers.py  urls.py  views.py
music_controller/api/migrations/: 0001_initial.py  0002_alter_room_id.py  0003_room_current_song.py
music_controller/frontend/: package-lock.json  package.json  urls.py
music_controller/frontend/src/: index.js
music_controller/frontend/src/components/: App.js  CreateRoomPage.js  MusicPlayer.js  Room.js  RoomJoinPage.js
music_controller/frontend/static/css/: index.css
music_controller/frontend/static/frontend/: main.js  main.js.LICENSE.txt
music_controller/frontend/templates/frontend/: index.html
music_controller/music_controller/: settings.py  urls.py
music_controller/spotify_api/: apps.py  credentials.py  urls.py  utils.py  views.py
music_controller/spotify_api/migrations/: 0001_initial.py  0002_vote.py
